--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		
+
 		<link rel="stylesheet" href="../shared/css/reveal.min.css">
 		<link rel="stylesheet" href="../shared/css/theme/default.css" id="theme">
 		<link rel="stylesheet" href="../shared/css/additional.css">
 		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="../shared/lib/css/zenburn.css">
+		<link rel="stylesheet" href="../shared/css/zenburn.css">
 
 		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
 		<script>
@@ -54,7 +54,7 @@
 					<br>
 					<code>ruby -run -e httpd . -p</code><br>
 					or<br>
-					<code>python -m SimpleHTTPServer 8080</code><br> 
+					<code>python -m SimpleHTTPServer 8080</code><br>
 					or<br>
 					<code>npm install -g node-static && static -p 8080</code>
 				</section>
@@ -68,7 +68,7 @@
 				</section>
 				<section>
 						<h1>Arbitrary image</h1>
-						<img src='img/sample.png' alt='this here for showing how to embed 
+						<img src='img/sample.png' alt='this here for showing how to embed
 						arbitrary images not from web'/>
 						<h3>Check out reveal.js author's original presentation -></h3>
 				</section>
